Checker Texture Creep #40692

Closed
opened 2014-06-18 21:54:16 +02:00 by Huw Pascoe · 9 comments

System Information
Windows 8.1 Update 1
GeForce GTX 550 Ti

Blender Version
Broken: 2.70.f93bc76

Short description of error
Using Cycles render, the checker texture creeps as the scale value increases.

Exact steps for others to reproduce the error
checker.blend
Set render to cycles, keep the default cube
Create a 1000x1000 dimension plane
Set the diffuse color to checker texture
set checker scale to 1000
The render shows the checkers have crept approx 0.5 units in both X and Y.
Capture.JPG

This happens with both default and UV coordinates.
A workaround is setting the texture scale down to 2 and using UV mapping repeating wrap to scale instead.

**System Information** Windows 8.1 Update 1 GeForce GTX 550 Ti **Blender Version** Broken: 2.70.f93bc76 **Short description of error** Using Cycles render, the checker texture creeps as the scale value increases. **Exact steps for others to reproduce the error** [checker.blend](https://archive.blender.org/developer/F94679/checker.blend) Set render to cycles, keep the default cube Create a 1000x1000 dimension plane Set the diffuse color to checker texture set checker scale to 1000 The render shows the checkers have crept approx 0.5 units in both X and Y. ![Capture.JPG](https://archive.blender.org/developer/F94682/Capture.JPG) This happens with both default and UV coordinates. A workaround is setting the texture scale down to 2 and using UV mapping repeating wrap to scale instead.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @huwp

Added subscriber: @huwp

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Author

*my bad, creep approx 0.05 for 1000 units

*my bad, creep approx 0.05 for 1000 units

Added subscriber: @mont29

Added subscriber: @mont29

Hence a deviation of about 0.005%… We are probably in the float precision area again (though I find it a bit high, maybe too much operations involved?).

Hence a deviation of about 0.005%… We are probably in the float precision area again (though I find it a bit high, maybe too much operations involved?).
Thomas Dinges self-assigned this 2014-06-20 08:48:17 +02:00

This issue was referenced by ead83a48f1

This issue was referenced by ead83a48f15c7677290fdedfde974ff3233e0441

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ead83a48f1.

Closed by commit ead83a48f1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40692
No description provided.