Fix T40692, Checker Texture derivation on very large scales (1k).

It might still have a derivation on larger scales (10k or more), but we need some offset to avoid precision issues on unit coordinates.